--- a/01-pong/styles.css
+++ b/01-pong/styles.css
@@ -2,7 +2,7 @@ canvas {
     position: absolute;
     left: 50%;
     top: 50%;
-    border: 1px solid black;
+    background-color: black;
     margin-top: -300px;
     margin-left: -300px;
 }
